# dorsal-adapters

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: check.sh
src/dorsal_adapters/: registry.py
src/dorsal_adapters/arxiv/: __init__.py  bibtex_adapter.py  bibtext_adapter.py  csl_json_adapter.py  helpers.py  md_adapter.py  ris_adapter.py
src/dorsal_adapters/audio/: __init__.py  md_adapter.py  srt.py  srt_adapter.py  tsv_adapter.py  txt_adapter.py  vtt_adapter.py
src/dorsal_adapters/common/: constants.py  validation.py
src/dorsal_adapters/document/: __init__.py  helpers.py  hocr_adapter.py  md_adapter.py  tsv_adapter.py  txt_adapter.py
src/dorsal_adapters/document/html_adapter/: __init__.py  exporter.py  parser.py  render.py  styles.py
tests/: conftest.py  test_registry.py
tests/arxiv/: test_arxiv_bibtex.py  test_arxiv_bibtext.py  test_arxiv_csl_json.py  test_arxiv_md.py  test_arxiv_ris.py
tests/audio/: test_audio_md.py  test_audio_srt.py  test_audio_tsv.py  test_audio_txt.py  test_audio_vtt.py  test_md.py  test_srt.py  test_tsv.py  test_txt.py  test_vtt.py
tests/common/: test_validation.py
tests/document/: test_document_helpers.py  test_document_hocr.py  test_document_html_exporter.py  test_document_html_parser.py  test_document_html_render.py  test_document_md.py  test_document_tsv.py  test_document_txt.py
