[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dorsalhub-adapters"
version = "0.2.0"
description = "Export validated JSON to standard formats."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Rio Achuzia", email = "rio@dorsalhub.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "srt>=3.5.3",
    "webvtt-py>=0.5.1",
]

[project.urls]
"Homepage" = "https://dorsalhub.com"
"Repository" = "https://github.com/dorsalhub/dorsal-adapters"
"Documentation" = "https://docs.dorsalhub.com"

[tool.hatch.build.targets.wheel]
packages = ["src/dorsal_adapters"]
include = ["LICENSE", "NOTICE", "/src/dorsal_adapters/py.typed"]

[tool.hatch.build.targets.sdist]
exclude = ["/scripts", "uv.lock", ".github"]

[tool.pytest.ini_options]
log_cli = true
log_level = "DEBUG"
log_cli_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["F401"]

[tool.mypy]
exclude = ["dist/", "build/", "venv/", ".venv/"]
mypy_path = "src"
warn_unreachable = true
strict = true

[[tool.mypy.overrides]]
module = ["srt", "webvtt"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "black>=24.10.0",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "dorsalhub>=0.8.2",
    "hocr-tools-lib>=1.2.0"
]
